<resources>
    <string name="app_name">Crypto E-wallet</string>
    <string name="hint_full_name">Nome completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_amount">Quantidade</string>
    <string name="label_button_register">Cadastrar</string>
    <string name="label_button_confirm">Confirmar</string>
    <string name="label_button_sign_in">Entrar</string>
    <string name="label_button_sign_up">Não possui uma conta? Cadastre-se</string>
    <string name="toolbar_title_register">Cadastro</string>
    <string name="try_again">Tentar novamente</string>
    <string name="title_bottom_menu_wallet">Carteira</string>
    <string name="title_bottom_menu_history">Extrato</string>
    <string name="toolbar_menu_logout">Sair</string>
    <string name="wallet_label_valor_compra">Valor de compra</string>
    <string name="wallet_label_valor_venda">Valor de venda</string>
    <string name="wallet_label_valor_total">Valor disponível na carteira</string>
    <string name="empty_transactions">Você ainda não possui transações.</string>
</resources>